apps/peanut/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peanut
  namespace: peanut
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peanut
  template:
    metadata:
      labels:
        app: peanut
    spec:
      enableServiceLinks: false
      containers:
        - name: peanut
          image: brandawg93/peanut:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 128Mi
              cpu: "250m"
            requests:
              memory: 64Mi
              cpu: "10m"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
