apps/peanut/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: peanut
  namespace: peanut
spec:
  selector:
    app: peanut
  ports:
    - port: 8080
      targetPort: 8080
